# Master_Thesis

./: .gitignore  README.md  anforande_ids.npy  cypher_queries.txt  dataloader.py  detailed_output.csv  documents.npy  final_248_combined_result_evaluated.json  notebook.ipynb  pyproject.toml  rag_output.json
data_import/: clear_graph.py  create_dataset.py  create_graph.py  data_import.py  embed.py  embed_nodes.py  filter_avsnittsrubrik.ipynb  filter_dataset.py  filter_dataset_by_year.py  final_248_combined_result_cleaned.json  graph_creation.py  look_at_data.py  normalise_data.py  rag_output_exp1.json  update_dataset.py
data_import/data/: filtered_riksdag.csv
data_import/data_large_size/: analyse_data_notebook.ipynb  create_faiss_index.py  run_faiss.py
data_import/data_small_size/: analyse_results.py  analysing_notebook.ipynb  create_bm25_index.py  create_faiss_index.py  generate_test_set_from_random_data.py  get_dok_ids.py  pick_more_random_data.py  pick_random_data.py  qa_dataset_random_entries.json  qa_type_model_responses.txt  retrieve_from_faiss.py  run_questions_faiss.py  run_questions_graph_testing.py
data_import/dev_folder/: wrapper_data_graph_creation.py
data_import/exp1/: even_more_filtered_riksdag.json  exp1.py  generate_testset.py  generated_testset_2.json  trying_things.ipynb
data_import/exp2/: evaluate_query_quality.py  evaluated_dataset.json  filtering.ipynb  generate_queries.py  mini_dataset.json  pick_random_data.py  qa_dataset.json  qa_dataset_exp2.json  question_database.py  random_sample.json  updated_dataset.json
data_import/exp3_cosine_sim/: cosine_rag.py  mini_riksdag_wo_bio.json  question_database.py
data_import/exp4_improved_prompts/: formatted_qa_dataset_2.json  qa_dataset_2.json
data_import/experimental/: cypher_queries.txt  metadata_queries.txt  notebook.ipynb  test_cypher_queries.ipynb
data_import/first_graph_creation/: clear_graph.py  create_dataset.py
data_import/no_metadata_exp1/: demetadatify_data.py
data_import/obsolete/: first_test_set.json  generated_testset.json  ragas_test_set_creation.py
evaluation/: generate_test_set.py  precision_recall_w_GS.py
evaluation/numeral_evaluation/: check_right_metadata.py
evaluation/old_eval/: analyse_results.py  evaluated_dataset_exp1.json  ragas.py  (+3 more)
kg_ne4j/: data_import.py
llm_retrieval/: KGRAG_full_pipeline.py  cypher_translation.py  full_pipeline.py  full_pipeline_class.py  generate_response.py  langchain_baseline.py  node_ranking.py  node_retrieval.py  old_test.py  older_test.py  oldest_test.py  parameter_testing.py  prompt_testing.py  retrieve_from_faiss.py  wrapper.py
run_experiments/: run_KG.py  run_faiss.py
(+126 files in other folders)
