[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "community>=1.0.0b1",
    "datasets==2.20.0",
    "display>=1.0.0",
    "faiss-cpu>=1.10.0",
    "ijson>=3.3.0",
    "ipycytoscape>=1.3.3",
    "langchain==0.3.9",
    "langchain-community==0.3.9",
    "langchain-neo4j==0.1.1",
    "langchain-openai==0.2.10",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.2.74",
    "library>=3.0.49",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "more-itertools>=10.7.0",
    "neo4j==5.27.0",
    "nltk==3.8.1",
    "openai==1.56.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.5",
    "pytest>=8.3.5",
    "python-dotenv==1.0.1",
    "ragas==0.1.14",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.4.1",
    "tenacity!=8.4.0",
    "textblob==0.18.0.post0",
    "transformers>=4.49.0",
    "unstructured>=0.14.8",
    "weaviate-client[embedded]>=4.11.3",
    "yfiles-jupyter-graphs-for-neo4j>=1.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
